--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
         <div class="todo-app">
             <h2> To-Do List <img src="img/Gartoon-Team-Gartoon-Misc-Gtk-Edit.svg" alt=""></h2>
             <div class="row">
-                <input type="text" id="input-box" placeholder="Add Your text">
-                <button>Add</button>
+                <input type="text" id="input-box"  placeholder="Add Your text">
+                <button onclick="addTask();">Add
+                </button>
             </div>
             <ul id="list-container">
-                <li class="checked">Task 1</li>
-                <li>Task 2</li>
-                <li>Task 3</li>
             </ul>
+            <button class="delete-all", onclick="deleteAll()">Delete all</button>
         </div>
+        
     </div>
+<script src="script.js"></script>
 </body>
 </html>
